Feat: Estrutura da HomePage. Variáveis de estilização da paleta de cores. Fontes e Ícones

--- a/index.html
+++ b/index.html
@@ -9,7 +9,51 @@
         <link rel="stylesheet" href="CSS/style.css">
     </head>
     <body>
-        
+        <header class="header-page">
+            <div class="background-colorido-header">
+                <h2>Portal do Paciente</h2>
+                <img src="./Assets/Icons/home_icon.svg" alt="Ícone de Casa simbolizando a home page">
+            </div>
+        </header>
+        <main>
+            <section class="titulo-home-page">
+                <h2>O cuidado que você merece</h2>
+                <h3>na palma da sua mão</h3>
+                <p id="descricao-website">“Uma plataforma acessível que permite pacientes aprenderem os meios necessários para cuidarem de sua saúde, digitalmente.”</p>
+
+                <p id="explicacao-conteudo-website">Com tutoriais simples e direto-ao-ponto, você poderá entender e realizar operações no website do Hospital das Clínicas, que antes pareciam ser muito complicadas.</p>
+            </section>
+
+            <h2 id="guias-de-acesso-title">Guias de Acesso</h2>
+
+            <ul id="lista-guias-de-acesso">
+                <a href="">
+                    <li>
+                        Portal do Paciente
+                        <img src="./Assets/Icons/portal_paciente_icon.svg" alt="Ícone da opção Portal do Paciente. Uma figura de uma pessoa, colorida em branco, com um pequeno símbolo de mais, ou adição, do lado.">
+                    </li>
+                </a>
+                <a href="">
+                    <li>
+                        Resultados dos Exames
+                        <img src="./Assets/Icons/exames_icon.svg" alt="Ícone da opção Resultados dos Exames. Uma figura de um pequeno documento, colorido em branco, com um pequeno símbolo da letra A, com um positivo ao lado.">
+                    </li>
+                </a>
+                <a href="">
+                    <li>
+                        Lista de Prescrições
+                        <img src="./Assets/Icons/prescricoes_icon.svg" alt="Ícone da opção Lista de Prescrições. Uma figura de um frasco, simbolizando um remédio, colorido em branco.">
+                    </li>
+                </a>
+                <a href="">
+                    <li>
+                        Lista de Agendamentos
+                        <img src="./Assets/Icons/agendamentos_icon.svg" alt="Ícone da opção Lista de Agendamentos. Uma figura de um pequeno calendário, colorido em branco.">
+                    </li>
+                </a>
+            </ul>
+        </main>
+
         <script src="JS/script.js" async defer></script>
     </body>
 </html>
