feat: Página de contato, e o seu arquivo CSS.

--- a/quem_somos.html
+++ b/quem_somos.html
@@ -27,7 +27,7 @@
                     <a target="_blank" href="https://github.com/AndreColombo">
                         <img draggable="false" src="./Assets/Icons/github_icon.png" alt="Ícone com a logo do Github">
                     </a>
-                    <a target="_blank" href="">
+                    <a target="_blank" href="https://www.linkedin.com/in/andrerosacolombo">
                         <img draggable="false" src="./Assets/Icons/linkedin_icon.png" alt="Ícone com a logo do Linkedin">
                     </a>
                 </div>
