--- a/index.html
+++ b/index.html
@@ -11,56 +11,92 @@
 </head>
 
 <body>
-    <header class="header-page">
-        <div class="background-colorido-header">
-            <h2>Portal do Paciente</h2>
-            <img src="./Assets/Icons/home_icon.svg" alt="Ícone de Casa simbolizando a home page">
+    <nav class="navbar-esquerda">
+        <div class="relative-parent">
+            <img src="Assets/Icons/arrow_back_icon.svg" alt="Seta para a esquerda. Sinaliza a função de fechar o menu de links" class="close-menu">
+            <img class="logo-hc" draggable="false" src="Assets/logo_hc.png" alt="Logo do Hospital das Clínicas">
+            <ul class="lista-links-menu">
+                <a href="index.html">
+                    <li>
+                        Home
+                        <img src="Assets/Icons/home_icon.svg" alt="">
+                    </li>
+                </a>
+                <a href="">
+                    <li>
+                        FAQ
+                        <img src="Assets/Icons/faq_icon.svg" alt="">
+                    </li>
+                </a>
+                <a href="contato.html">
+                    <li>
+                        Contato
+                        <img src="Assets/Icons/contato.svg" alt="">
+                    </li>
+                </a>
+                <a href="quem_somos.html">
+                    <li>
+                        Quem somos
+                        <img src="Assets/Icons/quem_somos_icon.svg" alt="">
+                    </li>
+                </a>
+                </ol>
         </div>
-    </header>
-    <main>
-        <section class="titulo-home-page">
-            <h2>O cuidado que você merece</h2>
-            <h3>na palma da sua mão</h3>
-            <p id="descricao-website">“Uma plataforma acessível que permite pacientes aprenderem os meios necessários
-                para cuidarem de sua saúde, digitalmente.”</p>
+    </nav>
+    <div class="estrutura-pagina-menu">
+        <header class="header-page">
+            <div class="background-colorido-header">
+                <h2>Portal do Paciente</h2>
+                <img src="./Assets/Icons/home_icon.svg" alt="Ícone de Casa simbolizando a home page">
+            </div>
+        </header>
+        <main>
+            <section class="titulo-home-page">
+                <h2>O cuidado que você merece</h2>
+                <h3>na palma da sua mão</h3>
+                <p id="descricao-website">“Uma plataforma acessível que permite pacientes aprenderem os meios
+                    necessários
+                    para cuidarem de sua saúde, digitalmente.”</p>
 
-            <p id="explicacao-conteudo-website">Com tutoriais simples e direto-ao-ponto, você poderá entender e realizar
-                operações no website do Hospital das Clínicas, que antes pareciam ser muito complicadas.</p>
-        </section>
+                <p id="explicacao-conteudo-website">Com tutoriais simples e direto-ao-ponto, você poderá entender e
+                    realizar
+                    operações no website do Hospital das Clínicas, que antes pareciam ser muito complicadas.</p>
+            </section>
 
-        <h2 id="guias-de-acesso-title">Guias de Acesso</h2>
+            <h2 id="guias-de-acesso-title">Guias de Acesso</h2>
 
-        <ul id="lista-guias-de-acesso">
-            <a href="">
-                <li>
-                    Portal do Paciente
-                    <img src="./Assets/Icons/portal_paciente_icon.svg"
-                        alt="Ícone da opção Portal do Paciente. Uma figura de uma pessoa, colorida em branco, com um pequeno símbolo de mais, ou adição, do lado.">
-                </li>
-            </a>
-            <a href="">
-                <li>
-                    Resultados dos Exames
-                    <img src="./Assets/Icons/exames_icon.svg"
-                        alt="Ícone da opção Resultados dos Exames. Uma figura de um pequeno documento, colorido em branco, com um pequeno símbolo da letra A, com um positivo ao lado.">
-                </li>
-            </a>
-            <a href="">
-                <li>
-                    Lista de Prescrições
-                    <img src="./Assets/Icons/prescricoes_icon.svg"
-                        alt="Ícone da opção Lista de Prescrições. Uma figura de um frasco, simbolizando um remédio, colorido em branco.">
-                </li>
-            </a>
-            <a href="">
-                <li>
-                    Lista de Agendamentos
-                    <img src="./Assets/Icons/agendamentos_icon.svg"
-                        alt="Ícone da opção Lista de Agendamentos. Uma figura de um pequeno calendário, colorido em branco.">
-                </li>
-            </a>
-        </ul>
-    </main>
+            <ul id="lista-guias-de-acesso">
+                <a href="">
+                    <li>
+                        Portal do Paciente
+                        <img src="./Assets/Icons/portal_paciente_icon.svg"
+                            alt="Ícone da opção Portal do Paciente. Uma figura de uma pessoa, colorida em branco, com um pequeno símbolo de mais, ou adição, do lado.">
+                    </li>
+                </a>
+                <a href="">
+                    <li>
+                        Resultados dos Exames
+                        <img src="./Assets/Icons/exames_icon.svg"
+                            alt="Ícone da opção Resultados dos Exames. Uma figura de um pequeno documento, colorido em branco, com um pequeno símbolo da letra A, com um positivo ao lado.">
+                    </li>
+                </a>
+                <a href="">
+                    <li>
+                        Lista de Prescrições
+                        <img src="./Assets/Icons/prescricoes_icon.svg"
+                            alt="Ícone da opção Lista de Prescrições. Uma figura de um frasco, simbolizando um remédio, colorido em branco.">
+                    </li>
+                </a>
+                <a href="">
+                    <li>
+                        Lista de Agendamentos
+                        <img src="./Assets/Icons/agendamentos_icon.svg"
+                            alt="Ícone da opção Lista de Agendamentos. Uma figura de um pequeno calendário, colorido em branco.">
+                    </li>
+                </a>
+            </ul>
+        </main>
+    </div>
 
     <script src="JS/script.js" async defer></script>
 </body>
