Feat: Página FAQ com JS e CSS feitos.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <img src="Assets/Icons/home_icon.svg" alt="">
                     </li>
                 </a>
-                <a href="">
+                <a href="faq.html">
                     <li>
                         FAQ
                         <img src="Assets/Icons/faq_icon.svg" alt="">
