Feat: Página de Guia de agendamento. CSS Global de guias.

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                             alt="Ícone da opção Lista de Prescrições. Uma figura de um frasco, simbolizando um remédio, colorido em branco.">
                     </li>
                 </a>
-                <a href="">
+                <a href="agendamentos.html">
                     <li>
                         Lista de Agendamentos
                         <img src="./Assets/Icons/agendamentos_icon.svg"
