Feat: Página de Guia de Prescrições.

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                             alt="Ícone da opção Resultados dos Exames. Uma figura de um pequeno documento, colorido em branco, com um pequeno símbolo da letra A, com um positivo ao lado.">
                     </li>
                 </a>
-                <a href="">
+                <a href="prescricoes.html">
                     <li>
                         Lista de Prescrições
                         <img src="./Assets/Icons/prescricoes_icon.svg"
