Feat: Página de Guia de Exames.

--- a/exames.html
+++ b/exames.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Guia de Prescrições</title>
+    <title>Guia de Exames</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="CSS/prescricoes.css">
@@ -46,40 +46,58 @@
     <div id="estrutura-pagina-menu-selector" class="estrutura-pagina-menu">
         <header class="header-page">
             <div class="background-colorido-header">
-                <h2>Acessar as minhas Prescrições</h2>
-                <img src="./Assets/Icons/prescricoes_azul_icon.svg" alt="Ícone de Remédio Simbolizando a página de guia de prescrições">
+                <h2>Visualizar Resultados de Exames</h2>
+                <img src="./Assets/Icons/exames_azul_icon.svg" alt="Ícone de Exame com um pequeno A positivo ao lado. Simbolizando a página de guia de exames">
             </div>
         </header>
         <main>
-            <article id="etapa-1-prescricoes" class="etapa-guia">
+            <article id="etapa-1-exames" class="etapa-guia">
                 <div class="etapa-titulo">
                     <h3>Etapa 1</h3>
                     <a target="_blank" href="https://portaldopaciente.hc.fm.usp.br/">Clique aqui para abrir o portal do paciente</a>
                 </div>
                 <figure class="etapa-imagem" id="etapa-imagem-1">
-                    <img draggable="false" src="../Assets/Guias/Prescricoes/etapa_1.png" alt="">
-                    <figcaption class="etapa-paragrafo">Acesse a aba <span>“Minhas Receitas”</span> no <a target="_blank" href="https://portaldopaciente.hc.fm.usp.br/">portal do paciente</a> do Hospital das Clínicas.</figcaption>
+                    <img draggable="false" src="../Assets/Guias/Exames/etapa_1.png" alt="">
+                    <figcaption class="etapa-paragrafo">Acesse a aba <span>“Meus Resultados"</span>, no <a target="_blank" href="https://portaldopaciente.hc.fm.usp.br/">portal do paciente</a> do Hospital das Clínicas.</figcaption>
                 </figure>
 
                 <div class="linha-botoes-etapa">
-                    <a class="botao-etapa" href="#etapa-2-prescricoes">Próxima Etapa</a>
+                    <a class="botao-etapa" href="#etapa-2-exames">Próxima Etapa</a>
                 </div>
             </article>
 
             <div class="divider-guias"></div>
 
-            <article id="etapa-2-prescricoes" class="etapa-guia">
+            <article id="etapa-2-exames" class="etapa-guia">
                 <div class="etapa-titulo">
                     <h3>Etapa 2</h3>
                     <!-- <a target="_blank" href="https://portaldopaciente.hc.fm.usp.br/">Clique aqui para abrir o portal do paciente</a> -->
                 </div>
                 <figure class="etapa-imagem" id="etapa-imagem-2">
-                    <img draggable="false" src="../Assets/Guias/Prescricoes/etapa_2.png" alt="">
-                    <figcaption class="etapa-paragrafo">Nessa aba, as <span>prescrições receitadas</span> por médicos aparecerão por <span>ordem decrescente de vencimento</span>. É possível <span>imprimir</span> ou <span>salvar</span> em pdf as receitas, clicando em <span>“Visualizar”</span></figcaption>
+                    <img draggable="false" src="../Assets/Guias/Exames/etapa_2.png" alt="">
+                    <figcaption class="etapa-paragrafo">Nessa aba, aparecerão os <span>resultados</span> de todos os seus exames, eles poderão ser <span>impressos</span> ou <span>salvos</span> como um arquivo pdf.</figcaption>
                 </figure>
                 
                 <div class="linha-botoes-etapa">
-                    <a class="botao-etapa" href="#etapa-1-prescricoes">Finalizar Guia</a>
+                    <a class="botao-etapa" href="#etapa-1-exames">Etapa Anterior</a>
+                    <a class="botao-etapa" href="#etapa-3-exames">Próximo Adendo</a>
+                </div>
+            </article>
+
+            <div class="divider-guias"></div>
+
+            <article id="etapa-3-exames" class="etapa-guia">
+                <div class="etapa-titulo">
+                    <h3>Adendo</h3>
+                    <!-- <a target="_blank" href="https://portaldopaciente.hc.fm.usp.br/">Clique aqui para abrir o portal do paciente</a> -->
+                </div>
+                <figure class="etapa-imagem" id="etapa-imagem-2">
+                    <img draggable="false" src="../Assets/Guias/Exames/adendo_1.png" alt="">
+                    <figcaption class="etapa-paragrafo"><span>Exames</span> aparecerão com uma dessas duas imagens, <span>classificando-os</span> como <span>exames de imagem</span> e <span>exames laboratoriais</span>. São apenas <span>indicações visuais</span> e não alteram em nada o <span>processo</span>.</figcaption>
+                </figure>
+                
+                <div class="linha-botoes-etapa">
+                    <a class="botao-etapa" href="#etapa-1-exames">Finalizar Guia</a>
                 </div>
             </article>
         </main>
