--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             alt="Ícone da opção Portal do Paciente. Uma figura de uma pessoa, colorida em branco, com um pequeno símbolo de mais, ou adição, do lado.">
                     </li>
                 </a>
-                <a href="">
+                <a href="exames.html">
                     <li>
                         Resultados dos Exames
                         <img src="./Assets/Icons/exames_icon.svg"
