--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <h2 id="guias-de-acesso-title">Guias de Acesso</h2>
 
             <ul id="lista-guias-de-acesso">
-                <a href="">
+                <a href="registro_paciente.html">
                     <li>
                         Portal do Paciente
                         <img src="./Assets/Icons/portal_paciente_icon.svg"
