Feat: Responsividade Extra Large em TODAS as páginas.

--- a/contato.html
+++ b/contato.html
@@ -7,7 +7,8 @@
     <title>Contato</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="CSS/contato.css">
+    <link rel="stylesheet" href="CSS/contato/contato.css">
+    <link rel="stylesheet" href="CSS/contato/contato_extra_large.css">
 </head>
 
 <body>
