--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
     <title>Home Page – Guias de Acesso</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="CSS/index.css">
+    <link rel="stylesheet" href="CSS/index/index.css">
+    <link rel="stylesheet" href="CSS/index/index_extra_large.css">
 </head>
 
 <body>
     <nav id="navbar-esquerda-selector" class="navbar-esquerda">
         <div class="relative-parent">
-            <img src="Assets/Icons/arrow_back_icon.svg" onclick="navbar_toggle()" alt="Seta para a esquerda. Sinaliza a função de fechar o menu de links" id="close-menu-selector" class="close-menu">
+            <img src="Assets/Icons/arrow_back_icon.svg" onclick="navbar_toggle()"
+                alt="Seta para a esquerda. Sinaliza a função de fechar o menu de links" id="close-menu-selector"
+                class="close-menu">
             <img class="logo-hc" draggable="false" src="Assets/logo_hc.png" alt="Logo do Hospital das Clínicas">
             <ul id="lista-links-menu-selector" class="lista-links-menu">
                 <a href="index.html">
