--- a/quem_somos.html
+++ b/quem_somos.html
@@ -7,7 +7,8 @@
     <title>Quem Somos</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="CSS/quem_somos.css">
+    <link rel="stylesheet" href="CSS/quem_somos/quem_somos.css">
+    <link rel="stylesheet" href="CSS/quem_somos/quem_somos_extra_large.css">
 </head>
 
 <body>
@@ -82,7 +83,8 @@
                     <a target="_blank" href="https://github.com/ZeDio">
                         <img draggable="false" src="./Assets/Icons/github_icon.png" alt="Ícone com a logo do Github">
                     </a>
-                    <a target="_blank" href="https://www.linkedin.com/in/jos%C3%A9-diogo-d-33634b280?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">
+                    <a target="_blank"
+                        href="https://www.linkedin.com/in/jos%C3%A9-diogo-d-33634b280?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">
                         <img draggable="false" src="./Assets/Icons/linkedin_icon.png"
                             alt="Ícone com a logo do Linkedin">
                     </a>
