--- a/faq.html
+++ b/faq.html
@@ -7,7 +7,8 @@
     <title>Perguntas Frequentes</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="CSS/faq.css">
+    <link rel="stylesheet" href="CSS/faq/faq.css">
+    <link rel="stylesheet" href="CSS/faq/faq_extra_large.css">
 </head>
 
 <body>
@@ -56,50 +57,68 @@
         <main>
             <div class="pergunta-frequente">
                 <div class="titulo-pergunta-frequente">
-                    <img src="Assets/Icons/abrir_aba.svg" alt="Ícone de mais. Sinaliza a opção de abrir a pergunta frequente para disponibilizar a sua resposta.">
+                    <img class="icone-abrir-fechar-pergunta" src="Assets/Icons/abrir_aba.svg"
+                        alt="Ícone de mais. Sinaliza a opção de abrir a pergunta frequente para disponibilizar a sua resposta.">
                     <h3>O que é uma consulta online ou híbrida?</h3>
                 </div>
-                <p class="paragrafo-pergunta paragrafo-closed">Consultas online são feitas por vídeo chamada, sem a necessidade de ir até o hospital. Já as consultas híbridas combinam atendimentos presenciais e virtuais, dependendo da necessidade do paciente.</p>
+                <p class="paragrafo-pergunta paragrafo-closed">Consultas online são feitas por vídeo chamada, sem a
+                    necessidade de ir até o hospital. Já as consultas híbridas combinam atendimentos presenciais e
+                    virtuais, dependendo da necessidade do paciente.</p>
             </div>
             <div class="divider-faq"></div>
             <div class="pergunta-frequente">
                 <div class="titulo-pergunta-frequente">
-                    <img src="Assets/Icons/abrir_aba.svg" alt="Ícone de mais. Sinaliza a opção de abrir a pergunta frequente para disponibilizar a sua resposta.">
+                    <img class="icone-abrir-fechar-pergunta" src="Assets/Icons/abrir_aba.svg"
+                        alt="Ícone de mais. Sinaliza a opção de abrir a pergunta frequente para disponibilizar a sua resposta.">
                     <h3>E se eu tiver dificuldades com tecnologia?</h3>
                 </div>
-                <p class="paragrafo-pergunta paragrafo-closed">Você pode contar com nosso suporte digital humanizado. Temos tutoriais simples, passo a passo, e até ajuda por telefone ou WhatsApp para te orientar antes da consulta.</p>
+                <p class="paragrafo-pergunta paragrafo-closed">Você pode contar com nosso suporte digital humanizado.
+                    Temos tutoriais simples, passo a passo, e até ajuda por telefone ou WhatsApp para te orientar antes
+                    da consulta.</p>
             </div>
             <div class="divider-faq"></div>
             <div class="pergunta-frequente">
                 <div class="titulo-pergunta-frequente">
-                    <img src="Assets/Icons/abrir_aba.svg" alt="Ícone de mais. Sinaliza a opção de abrir a pergunta frequente para disponibilizar a sua resposta.">
+                    <img class="icone-abrir-fechar-pergunta" src="Assets/Icons/abrir_aba.svg"
+                        alt="Ícone de mais. Sinaliza a opção de abrir a pergunta frequente para disponibilizar a sua resposta.">
                     <h3>O que acontece se eu perder a consulta?</h3>
                 </div>
-                <p class="paragrafo-pergunta paragrafo-closed">Recomendamos que você contate o suporte do HC, o quanto antes, pelo WhatsApp ou telefone. Assim, eles podem ajudar você a remarcar ou entender o que dificultou seu acesso, evitando perdas futuras.</p>
+                <p class="paragrafo-pergunta paragrafo-closed">Recomendamos que você contate o suporte do HC, o quanto
+                    antes, pelo WhatsApp ou telefone. Assim, eles podem ajudar você a remarcar ou entender o que
+                    dificultou seu acesso, evitando perdas futuras.</p>
             </div>
             <div class="divider-faq"></div>
             <div class="pergunta-frequente">
                 <div class="titulo-pergunta-frequente">
-                    <img src="Assets/Icons/abrir_aba.svg" alt="Ícone de mais. Sinaliza a opção de abrir a pergunta frequente para disponibilizar a sua resposta.">
+                    <img class="icone-abrir-fechar-pergunta" src="Assets/Icons/abrir_aba.svg"
+                        alt="Ícone de mais. Sinaliza a opção de abrir a pergunta frequente para disponibilizar a sua resposta.">
                     <h3>A consulta online é segura?</h3>
                 </div>
-                <p class="paragrafo-pergunta paragrafo-closed">Sim. Todos os dados são protegidos e a conversa com o profissional de saúde é sigilosa, como em uma consulta presencial.</p>
+                <p class="paragrafo-pergunta paragrafo-closed">Sim. Todos os dados são protegidos e a conversa com o
+                    profissional de saúde é sigilosa, como em uma consulta presencial.</p>
             </div>
             <div class="divider-faq"></div>
             <div class="pergunta-frequente">
                 <div class="titulo-pergunta-frequente">
-                    <img src="Assets/Icons/abrir_aba.svg" alt="Ícone de mais. Sinaliza a opção de abrir a pergunta frequente para disponibilizar a sua resposta.">
+                    <img class="icone-abrir-fechar-pergunta" src="Assets/Icons/abrir_aba.svg"
+                        alt="Ícone de mais. Sinaliza a opção de abrir a pergunta frequente para disponibilizar a sua resposta.">
                     <h3>Alguém vai me avisar quando for a hora da consulta?</h3>
                 </div>
-                <p class="paragrafo-pergunta paragrafo-closed">Sim! Lembretes são enviados, automaticamente, antes da consulta. Algumas formas de comunicação nas quais você seria avisado(a): Whatsapp, Email, Telefone etc.</p>
+                <p class="paragrafo-pergunta paragrafo-closed">Sim! Lembretes são enviados, automaticamente, antes da
+                    consulta. Algumas formas de comunicação nas quais você seria avisado(a): Whatsapp, Email, Telefone
+                    etc.</p>
             </div>
             <div class="divider-faq"></div>
             <div class="pergunta-frequente">
                 <div class="titulo-pergunta-frequente">
-                    <img src="Assets/Icons/abrir_aba.svg" alt="Ícone de mais. Sinaliza a opção de abrir a pergunta frequente para disponibilizar a sua resposta.">
+                    <img class="icone-abrir-fechar-pergunta" src="Assets/Icons/abrir_aba.svg"
+                        alt="Ícone de mais. Sinaliza a opção de abrir a pergunta frequente para disponibilizar a sua resposta.">
                     <h3>Essa plataforma é feita pelo Hospital das Clínicas?</h3>
                 </div>
-                <p class="paragrafo-pergunta paragrafo-closed">Não! Essa plataforma foi feita por uma equipe, de estudantes da FIAP, participante do Desafio fornecido pelo Hospital das Clínicas. Nosso objetivo é auxiliar aqueles que encontram dificuldades ao interagirem com a tecnologia, mais especificamente ao acessar os sistemas do Hospital das Clínicas.</p>
+                <p class="paragrafo-pergunta paragrafo-closed">Não! Essa plataforma foi feita por uma equipe, de
+                    estudantes da FIAP, participante do Desafio fornecido pelo Hospital das Clínicas. Nosso objetivo é
+                    auxiliar aqueles que encontram dificuldades ao interagirem com a tecnologia, mais especificamente ao
+                    acessar os sistemas do Hospital das Clínicas.</p>
             </div>
             <div class="divider-faq"></div>
         </main>
