--- a/registro_paciente.html
+++ b/registro_paciente.html
@@ -7,7 +7,8 @@
     <title>Guia de Registro de Paciente</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="CSS/registro_paciente.css">
+    <link rel="stylesheet" href="CSS/registro_paciente/registro_paciente.css">
+    <link rel="stylesheet" href="CSS/registro_paciente/registro_paciente_extra_large.css">
 </head>
 
 <body>
