Feat: Responsividade Large para TODAS as páginas.

--- a/agendamentos.html
+++ b/agendamentos.html
@@ -8,6 +8,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="CSS/agendamentos/agendamentos.css">
+    <link rel="stylesheet" href="CSS/agendamentos/agendamentos_large.css">
     <link rel="stylesheet" href="CSS/agendamentos/agendamentos_extra_large.css">
 </head>
 
@@ -106,7 +107,8 @@
                         <span>visualização do agendamento</span> será aberta, com algumas informações que podem vir a
                         ser importantes dependendo do <span>tipo de agendamento</span>. <span>Leia bem o
                             documento!</span> Aqui você pode <span>imprimi-lo</span> ou <span>salvá-lo</span> como
-                        <span>pdf</span>.</figcaption>
+                        <span>pdf</span>.
+                    </figcaption>
                 </figure>
 
                 <div class="linha-botoes-etapa">
