--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="CSS/index/index.css">
+    <link rel="stylesheet" href="CSS/index/index_large.css">
     <link rel="stylesheet" href="CSS/index/index_extra_large.css">
 </head>
 
