--- a/registro_paciente.html
+++ b/registro_paciente.html
@@ -8,6 +8,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="CSS/registro_paciente/registro_paciente.css">
+    <link rel="stylesheet" href="CSS/registro_paciente/registro_paciente_large.css">
     <link rel="stylesheet" href="CSS/registro_paciente/registro_paciente_extra_large.css">
 </head>
 
