Feat: Responsividade Medium para TODAS as páginas.

--- a/faq.html
+++ b/faq.html
@@ -8,6 +8,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="CSS/faq/faq.css">
+    <link rel="stylesheet" href="CSS/faq/faq_medium.css">
     <link rel="stylesheet" href="CSS/faq/faq_large.css">
     <link rel="stylesheet" href="CSS/faq/faq_extra_large.css">
 </head>
